# kjson

./: .gitignore  LICENSE  README.md  binary.ts  decimal128.ts  deno.json  instant.ts  mod.ts  stream.ts  uuid.ts
assets/: README.md
clients/: .gitignore  README.md  SPEC_BINARY.md  SPEC_TEXT.md
clients/c/: Makefile  README.md  comprehensive_test.c  debug_extended.c  debug_test.c  kjson.c  kjson.h  kjson_binary.c  kjson_stringify.c  run_all_tests.sh  test_binary_and_roundtrip.c  test_complex.c  test_error_handling.c  test_extended.c  test_extended_subset.c  test_kjson.c
clients/golang/: README.md  go.mod  kjson.go  kjson_test.go  parse.go  stringify.go  unmarshal.go  uuid_gen.go
clients/postgres/: COMMENT_STANDARDS.md  Dockerfile  INSTALL_MACOS.md  MANUAL_INSTALL.md  Makefile  Makefile.docker  README.md  TESTING.md  TEST_RESULTS_SUMMARY.md  debug_path.sql  docker-compose.yml  docker-init.sql  install-macos.sh  kjson.control  reinstall.sql  run-tests.sh  test_aggregate_fix.sql  test_complex_ops.sql  test_critical_features.sql  test_empty_builders.sql  test_final_comprehensive.sql  test_fixes.sql  test_new_features.sql  test_results_final.txt
clients/postgres/sql/: kjson--1.0.0--1.0.1.sql  kjson--1.0.0.sql  kjson--1.0.1.sql
clients/postgres/src/: Makefile.kinstant_kduration  README_kinstant_kduration.md  kduration.c  kinstant.c  kinstant_kduration--1.0.sql  kinstant_kduration.control  kinstant_kduration.sql  kinstant_kduration_ops.c  kjson.h  kjson_binary.c  kjson_builders.c  kjson_casts.c  kjson_cmp.c  kjson_containment.c  kjson_gin.c  kjson_internal.h  kjson_io.c  kjson_io_native.c  kjson_io_simple.c  kjson_ops.c  kjson_parser.c  kjson_path_ops.c  kjson_stringify.c  kjson_temporal.c  (+1 more)
clients/python/: README.md  pyproject.toml  test_runner.py
clients/python/examples/: demo.py
clients/python/kjson/: __init__.py  api.py  parser.py  serializer.py  types.py
clients/python/tests/: __init__.py  test_parser.py  test_serializer.py  test_types.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: error.rs  lib.rs  parser.rs  serializer.rs  types.rs  value.rs
clients/rust/tests/: integration_test.rs
clients/testdata/: README.md  basic.kjson  complex.kjson  extended.kjson
examples/: binary_demo.ts  complete_demo.ts  demo.ts  streaming_demo.ts
tests/: binary_test.ts  decimal128_test.ts  extended_types_test.ts  kjson_test.ts  stream_test.ts
(+31 files in other folders)
