[package]
name = "kjson"
version = "0.1.0"
edition = "2021"
authors = ["kJSON Contributors"]
description = "Rust implementation of kJSON (Kind JSON) with extended type support"
repository = "https://github.com/atikayda/kjson"
license = "MIT"
keywords = ["json", "kjson", "bigint", "decimal", "uuid"]
categories = ["encoding", "parser-implementations"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
uuid = { version = "1.6", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
regex = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[features]
default = []
# Feature for procedural macros (coming soon)
# derive = ["kjson_derive"]